add html and css for hobbies

--- a/resume.html
+++ b/resume.html
@@ -85,7 +85,7 @@
         </div>
         <div class="row">
           <div class="col-xs-12 icon text-center">
-              <h2 class="title-job"> Front End Developer</h2>
+              <h2 class="title-job"> Software Developer</h2>
           </div>
         </div>
       </div>
@@ -99,15 +99,15 @@
               <span>About Me</span>
              </h3>
       			 <p class="text-justify" >
-      				I work on development of innovative tools to <strong>automate</strong> and <strong>optimize daily tasks</strong>, render the right data to the right person and to permit to developer to be <strong>focused on his task instead of its environment</strong>.<br>
+      				I work on development of innovative tools to automatize and optimize daily tasks, on data analyzisis to compute and extract only essential information, and on web technologies to render data everywhere.<br>
 
-              I prefer to use combination of technologies and languages rather than focusing on only one language and technology, <strong>complex is better than complicated</strong>. If it take more time to do the right thing, i will take this time instead of postpone it to tomorrow.<br>
+              I prefer to use combination of technologies and languages rather than focusing on only one language and technology, complex is better than complicated. I prefer to take more time to do the right think rather than deliver a quick and dirty workaround.<br>
 
-              I like <strong>learn new things</strong>, especially from those who know, and apply these new knowledges to my daily work. My learning choices are <strong>not focused in one domain</strong>, and cover the big data to IOT, passing through organization methods and web technologies.
+              I think that learning new things is a full part of our job. My learning choices are not focused in one domain, and cover the big data to IOT, passing through organization methods and web technologies.
       			 </p>
         		</div>
             <div class="col-xs-12 education">
-              <div class="row formation">
+            <div class="row formation">
               <div class="col-xs-12">
                 <h3 class="no-margin"><i class="fa fa-graduation-cap circle-icon"></i><span>Education<span></h3>
               </div> 
@@ -116,15 +116,15 @@
                   <div class="date"> 2012 </div>
                   <div class="circle"> </div>
                   <div class="name">  <strong> Master’s Degree</strong> </div>
-                  <div class="spec"> Genie Electrical </div>
+                  <div class="spec">Electrical Engineering</div>
                   <div class="address"><i class="fa fa-map-marker"></i> INSA Lyon</div>
                 </div>
               </div>
               <div class="col-xs-1 no-left-padding">
                 <div class="school-icon"> <img src="icon/insa.jpg" width="50px" height="50px"> </div>
               </div> 
-              </div>
-              <div class="row formation">
+            </div>
+            <div class="row formation">
               <div class="col-xs-10 col-xs-offset-1">
                 <div class="diplome" style="height: 7.5em;">
                   <div class="date"> 2009 </div>
@@ -224,8 +224,15 @@
                   </div>
                 </div>
               </div>
+              <div class="row skill">
+                <div class="col-xs-12 language">
+                  <h4><i class="fa fa-star circle-icon"></i><span>Hobbies</span></h4>
+                </div>
+                <div class="col-xs-12"> Cycling, Running, Swimming </div>
+              </div>
             </div>
           </div>
+
         </div>
         <div class="col-xs-7 column">
           <div class="row experience">
@@ -239,32 +246,32 @@
                     <div class="col-xs-8">
                       <div class="row">
                         <div class="col-xs-12">
-                          <h4 class="no-margin"> Front-end/Back-end developper</h4>
+                          <h4 class="no-margin"> Software developer</h4>
                         </div>
                       </div>  
                       <div class="row">
-                        <div class="col-xs-2">
+                        <div class="col-xs-4">
                           10-2013
                         </div>
                         <div class="col-xs-2 col-xs-offset-6">
-                          06-2016
+                          now
                         </div>
                       </div>
                       <div class="row">
                         <div class="col-xs-2">
                           <img src="icon/start.png" height="20px" width="20px" />
                         </div>
-                      <div class="col-xs-7 exp-line"></div>
-                        <div class="col-xs-2">
+                      <div class="col-xs-9 exp-line"></div>
+                        <!-- <div class="col-xs-2">
                           <img src="icon/finish.png" height="20px" width="20px" />
-                        </div>
+                        </div> -->
                       </div>
                     </div>
                   </div>
               <div class="row">
                 <div clas="col-xs-12">
                     <div class="job-description">
-                      <strong>Development and deployment  of continuous integration services</strong> for a firmware team
+                      <strong>Development and deployment  of continuous integration services</strong>
                         <ul>
                           <li>On commit build (<em>git</em>,<em>svn</em>)</li>
                           <li>On commit, daily and weekly regression campaigns(<em>shell script</em>)</li>
@@ -272,7 +279,7 @@
                         </ul>
                         Development of a framework to render results from continuous integration 
                         <ul>
-                          <li>Jenkins plug-in to connect outputs to a database, to manage event on results and to inform users.(<em>Java</em>)</li>
+                          <li>Jenkins plug-in to connect campaigns results to a database, to manage event and to notify users.(<em>Java</em>)</li>
                           <li>Development of a complete database architecture, views, index and stored procedures(<em>sql</em>,<em>pl/sql</em>,<em>postgresql</em>)</li>
                           <li>Specification, development and deployment from scratch of a web site for visualisation and management of the continuous integration(<em>Python</em>,<em>Django</em>,<em>HTML</em>,<em>CSS</em>,<em>javascript</em>,<em>Bootstrap</em>)</li>
                         </ul>
@@ -281,19 +288,19 @@
           </div>
             <div class="row">
               <div class="col-xs-4">
-                <img src="icon/MDR.jpg" class="img-thumbnail"/>
+                <img src="icon/MDR.jpg" class="img-thumbnail" />
               </div>
               <div class="col-xs-8">
                 <div class="row">
                   <div class="col-xs-12">
-                    <h4 class="no-margin"> Industrial Computing developper and Project manager</h4>
+                    <h4 class="no-margin"> Industrial Computing developer/Project manager</h4>
                   </div>
                 </div>  
                 <div class="row">
-                  <div class="col-xs-2">
+                  <div class="col-xs-4">
                     02-2012
                   </div>
-                  <div class="col-xs-2 col-xs-offset-6">
+                  <div class="col-xs-4 col-xs-offset-4">
                     10-2013
                   </div>
                 </div>
@@ -313,7 +320,7 @@
                   <div class="job-description">
                     Industrial computing developer 
                     <ul>
-                      <li>Development of a new system architecture (<em>state machine</em>,<em>GEMMA</em>),Build of a modular and scalable software to fit to the entire product range(<em>CEI 6113-3 languages</em>), Implementation of new communication protocols (Modbus, TCP/IP, GSM)</li>
+                      <li>Software architecture design<span class="hide">(<em>state machine</em>,<em>GEMMA</em>)</span>, developement of genric and modular source code<span class="hide">(<em>CEI 6113-3 languages</em>)</span>, implementation of new communication protocols<span class="hide">(Modbus, TCP/IP, GSM)</span></li>
                     </ul>
                     Project manager on complex systems (electric, electronic, automatism):
                     <ul>
@@ -323,44 +330,82 @@
                   </div>
               </div>
             </div>
-              <div class="row">
-                <div class="col-xs-12 tools">
-                  <h4><i class="fa fa-wrench circle-icon"></i><span>Tools</span></h4>
+            <div class="row">
+              <div class="col-xs-4">
+                <img src="icon/rexroth.png" class="img-thumbnail" />
+              </div>
+              <div class="col-xs-8">
+                <div class="row">
+                  <div class="col-xs-12">
+                    <h4 class="no-margin"> Embedded software developer</h4>
+                  </div>
+                </div>  
+                <div class="row">
+                  <div class="col-xs-4">
+                    09-2010
+                  </div>
+                  <div class="col-xs-4 col-xs-offset-4">
+                    02-2011
+                  </div>
                 </div>
-                <div class="col-xs-4 tools-item">
-                  <img src="icon/django.png" height="20px" width="20px"> Django </img>
-                </div>
-                <div class="col-xs-4 tools-item">
-                  <img src="icon/bootstrap.png" height="20px" width="20px"> Bootstrap </img>
-                </div>
-                <div class="col-xs-4 tools-item">
-                  <img src="icon/jquery.png" height="20px" width="20px">jQuery</img>
-                </div>
-                <div class="col-xs-4 tools-item">
-                  <img src="icon/postgresql.png" height="20px" width="20px">PostgreSQL</img>
-                </div>
-                <div class="col-xs-4 tools-item">
-                  <img src="icon/mysql.png" height="20px" width="20px">MySql</img>
-                </div>
-                <div class="col-xs-4 tools-item">
-                  <img src="icon/linux.svg" height="20px" width="20px">Linux</img>
-                </div>
-                <div class="col-xs-4 tools-item">
-                  <img src="icon/git.png" height="20px" width="20px">Git</img>
-                </div>
-                <div class="col-xs-4 tools-item">
-                  <img src="icon/apache.png" height="20px" width="20px">Apache</img>
-                </div>
-                <div class="col-xs-4 tools-item">
-                  <img src="icon/jenkins.png" height="20px" width="20px">Jenkins</img>
+                <div class="row">
+                  <div class="col-xs-2">
+                    <img src="icon/start.png" height="20px" width="20px" />
+                  </div>
+                <div class="col-xs-7 exp-line"></div>
+                  <div class="col-xs-2">
+                    <img src="icon/finish.png" height="20px" width="20px" />
+                  </div>
                 </div>
               </div>
-          </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-12">
+                  <div class="job-description">
+                    Development of the firmware in an electronic joystick (THE5) 
+                    <ul>
+                      <li>Optimization of the main scheduler, code optimization to fit real time processing</li>
+                      <li>Development of new features involving PWM and CAN protocol</li>
+                      <li>Test plan specification and deploymeent of validation campaigns </li>
+                    </ul>
+                  </div>
+              </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 tools">
+                  <h4 style="margin:0;"><i class="fa fa-wrench circle-icon"></i><span>Tools</span></h4>
+                </div>
+                <div class="col-xs-3 tools-item">
+                  <img src="icon/django.png" height="20px" width="20px"> Django </img>
+                </div>
+                <div class="col-xs-3 tools-item">
+                  <img src="icon/jquery.png" height="20px" width="20px"> jQuery</img>
+                </div>
+                <div class="col-xs-3 tools-item">
+                  <img src="icon/linux.svg" height="20px" width="20px"> Linux</img>
+                </div>
+                <div class="col-xs-3 tools-item">
+                  <img src="icon/bootstrap.png" height="20px" width="20px"> Bootstrap </img>
+                </div>
+                <div class="col-xs-3 tools-item">
+                  <img src="icon/apache.png" height="20px" width="20px"> Apache</img>
+                </div>
+                <div class="col-xs-3 tools-item">
+                  <img src="icon/jenkins.png" height="20px" width="20px"> Jenkins</img>
+                </div>
+                <div class="col-xs-4 tools-item">
+                  <img src="icon/postgresql.png" height="20px" width="20px"> PostgreSQL</img>
+                </div>
+                <div class="col-xs-2 tools-item">
+                  <img src="icon/git.png" height="20px" width="20px"> Git</img>
+                </div>
             </div>
           </div>
-           </div>
         </div>
+        <div class="col-xs-12 power"><span style="font-size:10px;">resume powered by Bootstrap</span></div>
+      </div>
     </div>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
