first version released

--- a/resume.html
+++ b/resume.html
@@ -156,20 +156,23 @@
             <div class="col-xs-12">
               <div class="row skill">
                 <div class="col-xs-12 language">
-                  <h4><i class="fa fa-code circle-icon"></i><span>Languages</span></h4>
+                  <h4 class="no-margin"><i class="fa fa-code circle-icon"></i><span>Languages</span></h4>
                 </div>
+                <div class="col-xs-4"></div>
+                <div class="col-xs-3 skill-scale">Beginner</div>
+                <div class="col-xs-2 skill-scale">Proficient</div>
+                <div class="col-xs-2 skill-scale right">Advanced</div>
                 <div class="col-xs-1">
                   <img src="icon/python.png" height="20px" width="20px">
                 </div>
                 <div class="col-xs-3">
                   Python
                 </div>
-                <div class="col-xs-7">
-                  <div class="progress">
+                <div class="col-xs-7 progress">
+                  
                     <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
                       <span class="sr-only">90% Complete</span>
                     </div>
-                  </div>
                 </div>
                 <div class="col-xs-1">
                   <img src="icon/java.png" height="20px" width="20px">
@@ -177,12 +180,11 @@
                 <div class="col-xs-3">
                   Java
                 </div>
-                <div class="col-xs-7">
-                  <div class="progress">
+                <div class="col-xs-7 progress">
                     <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60"aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                       <span class="sr-only">60% Complete</span>
                     </div>
-                  </div>
+                  
                 </div>
                 <div class="col-xs-1">
                   <img src="icon/C++.png" height="20px" width="20px">
@@ -190,12 +192,10 @@
                  <div class="col-xs-3">
                   C/C++
                 </div>
-                <div class="col-xs-7">
-                  <div class="progress">
+                <div class="col-xs-7 progress">
                     <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
                       <span class="sr-only">75% Complete</span>
                     </div>
-                  </div>
                 </div>
                 <div class="col-xs-1">
                   <img src="icon/sql.png" height="20px" width="20px">
@@ -203,12 +203,10 @@
                 <div class="col-xs-3">
                   SQL
                 </div>
-                <div class="col-xs-7">
-                  <div class="progress">
+                <div class="col-xs-7 progress">
                     <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
                       <span class="sr-only">70% Complete</span>
                     </div>
-                  </div>
                 </div>
                 <div class="col-xs-1">
                   <img src="icon/web.png" height="20px" width="20px">
@@ -216,19 +214,20 @@
                 <div class="col-xs-3 text-justify">
                   <p>HTML5 CSS3 JavaScript</p>
                 </div>
-                <div class="col-xs-7">
-                  <div class="progress">
+                <div class="col-xs-7 progress">
                     <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
                       <span class="sr-only">85% Complete</span>
                     </div>
-                  </div>
                 </div>
               </div>
               <div class="row skill">
                 <div class="col-xs-12 language">
-                  <h4><i class="fa fa-star circle-icon"></i><span>Hobbies</span></h4>
+                  <h4 class="no-margin"><i class="fa fa-star circle-icon"></i><span>Hobbies</span></h4>
                 </div>
-                <div class="col-xs-12"> Cycling, Running, Swimming </div>
+                <div class="col-xs-3 col-xs-offset-1 hobby"> <i class="fa fa-heart"></i> Cycling</div>
+                <div class="col-xs-3 hobby"> <i class="fa fa-heart"></i> Runnig</div>
+                <div class="col-xs-3 hobby"> <i class="fa fa-heart"></i> Swim</div>
+                <div class="col-xs-12 power"></div>
               </div>
             </div>
           </div>
@@ -400,10 +399,12 @@
                   <img src="icon/git.png" height="20px" width="20px"> Git</img>
                 </div>
             </div>
+            <div class="row">
+              <div class="col-xs-12 power text-right"><span style="font-size:10px;">resume powered by Bootstrap</span></div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="col-xs-12 power"><span style="font-size:10px;">resume powered by Bootstrap</span></div>
-      </div>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
