add new way to show skill ( in tab)

--- a/resume.html
+++ b/resume.html
@@ -164,54 +164,68 @@
                 <div class="col-xs-12">
                   <h3 class="no-margin"><i class="fa fa-cogs circle-icon"></i><span>Skills</span></h3>
                 </div>
-                <div class="col-xs-12">
-                  <h4 class="no-margin text-center skill-domain"> Software Integration/Validation</h4>
-                </div>
+              </div>
+              <div class="row skill">
                 <div class="col-xs-4">
-                  <img src="icon/jenkins.png" height="20px" width="20px"> Jenkins</img>
+                  <h4 class="no-margin text-center skill-domain"> Software dev</h4>
                 </div>
+                <div class="col-xs-8 skill-tools">
+                  <div class="row">
+                    <div class="col-xs-6">
+                      <img src="icon/jenkins.png" height="20px" width="20px"> Jenkins</img>
+                    </div>
+                    <div class="col-xs-6">
+                      <img src="icon/java.png" height="20px" width="20px"> Java </img>
+                    </div>
+                    <div class="col-xs-6 tools-item">
+                      <img src="icon/python.png" height="20px" width="20px"> Python</img>
+                    </div>
+                    <div class="col-xs-6 tools-item">
+                      <img src="icon/C++.png" height="20px" width="20px">C/C++</img>
+                    </div>
+                    <div class="col-xs-6 tools-item">
+                      <img src="icon/linux.svg" height="20px" width="20px"> Linux</img>
+                    </div>
+                    <div class="col-xs-6 tools-item">
+                      <img src="icon/git.png" height="20px" width="20px"> Git</img>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row skill">
                 <div class="col-xs-4">
-                  <img src="icon/java.png" height="20px" width="20px">Java
-                </div>
-                <div class="col-xs-4 tools-item">
-                  <img src="icon/git.png" height="20px" width="20px"> Git</img>
-                </div>
-                <div class="col-xs-12">
                   <h4 class="no-margin text-center skill-domain"> Back end</h4>
                 </div>
-                <div class="col-xs-3">
-                  <img src="icon/sql.png" height="20px" width="20px">
-                    SQL
+                <div class="col-xs-8 skill-tools">
+                  <div class="row">
+                    <div class="col-xs-5 tools-item">
+                      <img src="icon/sql.png" height="20px" width="20px"> SQL</img>
+                    </div>
+                    <div class="col-xs-7">
+                      <img src="icon/postgresql.png" height="20px" width="20px"> PostgreSQL</img>
+                    </div>
+                    <div class="col-xs-6">
+                      <img src="icon/apache.png" height="20px" width="20px"> Apache</img>
+                    </div>
+                  </div>
                 </div>
+              </div>
+              <div class="row skill">
                 <div class="col-xs-4">
-                  <img src="icon/apache.png" height="20px" width="20px"> Apache</img>
+                  <h4 class="no-margin text-center skill-domain"> Front end</h4>
                 </div>
-                <div class="col-xs-5 tools-item">
-                  <img src="icon/postgresql.png" height="20px" width="20px"> PostgreSQL</img>
-                </div>
-                <div class="col-xs-12">
-                  <h4 class="no-margin text-center skill-domain"> Front End</h4>
-                </div>
-                <div class="col-xs-4">
-                  <img src="icon/django.png" height="20px" width="20px"> Django </img>
-                </div>
-                <div class="col-xs-4 tools-item">
-                  <img src="icon/bootstrap.png" height="20px" width="20px"> Bootstrap </img>
-                </div>
-                <div class="col-xs-4">
-                  <img src="icon/jquery.png" height="20px" width="20px"> jQuery</img>
-                </div>
-                <div class="col-xs-12">
-                  <h4 class="no-margin text-center skill-domain"> Embedded Software</h4>
-                </div>
-                <div class="col-xs-4">
-                  <img src="icon/C++.png" height="20px" width="20px">C/C++
-                </div>
-                <div class="col-xs-4">
-                  <img src="icon/linux.svg" height="20px" width="20px"> Linux</img>
-                </div>
-                <div class="col-xs-4">
-                  <img src="icon/python.png" height="20px" width="20px"/> Python 
+                <div class="col-xs-8 skill-tools">
+                  <div class="row">
+                    <div class="col-xs-6">
+                      <img src="icon/django.png" height="20px" width="20px"> Django </img>
+                    </div>
+                    <div class="col-xs-6">
+                      <img src="icon/bootstrap.png" height="20px" width="20px"> Bootstrap </img>
+                    </div>
+                    <div class="col-xs-6 tools-item">
+                      <img src="icon/jquery.png" height="20px" width="20px"> jQuery</img>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
