--- a/resume.html
+++ b/resume.html
@@ -41,6 +41,9 @@
                   <div class="col-xs-12">
                     <h4 class="no-margin"> Florent DALIGAND </h4>
                   </div>
+                  <div class="col-xs-12">
+                    <h5 class="no-margin"> 26 years </h5>
+                  </div>
                   <div class="col-xs-1">
                     <img src="icon/phone.png" width="20px" height="20px"/>
                   </div>
@@ -90,7 +93,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row resume-content">
       	<div class="col-xs-6 column">
           <div class="row">
       		  <div class="col-xs-12 aboutme">
@@ -101,9 +104,9 @@
     			    <p class="text-justify" >
       				  I'm in charge of developping innovative tools to automatize and optimize daily tasks, analyzing datas to compute and extract only essential information, and rendering data everywher through web technologies.<br>
 
-                I prefer using a combination of technologies and languages rather than focusing on only one,as Linus says, complex is better than complicated. I like to take step back to do the right things rather than deliver a quick workaround.<br>
+                I prefer using a combination of technologies and languages rather than focusing on only one,as Guido says, complex is better than complicated. I like to take step back to do the right things rather than deliver a quick workaround.<br>
 
-                I'm convinced that technological watch is an important part of my job. My learning choices are not focused in one domain, and cover the big data to IOT, passing through organization methods and web technologies.<br>
+                I'm convinced that technological watch is an important part of my job. My learning choices are diverse, and cover the big data to embedded system for IOT, passing through organization methods and web technologies.<br>
 
                 I'm a creative,serious and enthusiastic person,who like to be helpful and attuned to my teammates.
     			    </p>
@@ -162,80 +165,109 @@
             <div class="col-xs-12">
               <div class="row skill">
                 <div class="col-xs-12">
-                  <h3 class="no-margin"><i class="fa fa-cogs circle-icon"></i><span>Skills</span></h3>
+                  <h3 class="no-margin"><i class="fa fa-cogs circle-icon"></i><span>Skills & Tools</span></h3>
                 </div>
-              </div>
-              <div class="row skill">
-                <div class="col-xs-4">
-                  <h4 class="no-margin text-center skill-domain"> Software dev</h4>
-                </div>
-                <div class="col-xs-8 skill-tools">
+                <div class="col-xs-12">
                   <div class="row">
-                    <div class="col-xs-6">
-                      <img src="icon/jenkins.png" height="20px" width="20px"> Jenkins</img>
+                    <div class="col-xs-4">
+                      <h5 class="no-margin text-center skill-domain"> Software and Midlleware </h5>
                     </div>
-                    <div class="col-xs-6">
-                      <img src="icon/java.png" height="20px" width="20px"> Java </img>
-                    </div>
-                    <div class="col-xs-6 tools-item">
-                      <img src="icon/python.png" height="20px" width="20px"> Python</img>
-                    </div>
-                    <div class="col-xs-6 tools-item">
-                      <img src="icon/C++.png" height="20px" width="20px">C/C++</img>
-                    </div>
-                    <div class="col-xs-6 tools-item">
-                      <img src="icon/linux.svg" height="20px" width="20px"> Linux</img>
-                    </div>
-                    <div class="col-xs-6 tools-item">
-                      <img src="icon/git.png" height="20px" width="20px"> Git</img>
+                    <div class="col-xs-8 skill-tools">
+                      <div class="row">
+                        <div class="col-xs-4 tools-item">
+                          <img src="icon/python.png" height="20px" width="20px"> Python</img>
+                        </div>
+                        <div class="col-xs-4 tools-item">
+                          <img src="icon/C++.png" height="20px" width="20px"> C/C++</img>
+                        </div>
+                        <div class="col-xs-4 tools-item">
+                          <img src="icon/java.png" height="20px" width="20px"> Java </img>
+                        </div>
+                        <div class="col-xs-4 tools-item">
+                          <img src="icon/jenkins.png" height="20px" width="20px"> Jenkins</img>
+                        </div>
+                        <div class="col-xs-4 tools-item">
+                          <img src="icon/linux.svg" height="20px" width="20px"> Linux</img>
+                        </div>
+                        <div class="col-xs-4 tools-item">
+                          <img src="icon/shell.png" height="20px" width="20px"> Shell script</img>
+                        </div>
+                        <div class="col-xs-4 tools-item">
+                          <img src="icon/git.png" height="20px" width="20px"> Git</img>
+                        </div>
+                        <div class="col-xs-4 tools-item">
+                          <img src="icon/svn.png" height="20px" width="20px"> SVN</img>
+                        </div>
+                      </div>
                     </div>
                   </div>
-                </div>
-              </div>
-              <div class="row skill">
-                <div class="col-xs-4">
-                  <h4 class="no-margin text-center skill-domain"> Back end</h4>
-                </div>
-                <div class="col-xs-8 skill-tools">
                   <div class="row">
-                    <div class="col-xs-5 tools-item">
-                      <img src="icon/sql.png" height="20px" width="20px"> SQL</img>
+                    <div class="col-xs-4">
+                      <h5 class="no-margin text-center skill-domain"> Back end</h5>
                     </div>
-                    <div class="col-xs-7">
-                      <img src="icon/postgresql.png" height="20px" width="20px"> PostgreSQL</img>
-                    </div>
-                    <div class="col-xs-6">
-                      <img src="icon/apache.png" height="20px" width="20px"> Apache</img>
+                    <div class="col-xs-8 skill-tools">
+                      <div class="row">
+                        <div class="col-xs-3 tools-item">
+                          <img src="icon/sql.png" height="20px" width="20px"> SQL</img>
+                        </div>
+                        <div class="col-xs-4 tools-item">
+                          <img src="icon/django.png" height="20px" width="20px"> Django </img>
+                        </div>
+                        <div class="col-xs-4 tools-item">
+                          <img src="icon/apache.png" height="20px" width="20px"> Apache</img>
+                        </div>
+                        <div class="col-xs-5 tools-item">
+                          <img src="icon/mongodb.png" height="20px" width="20px"> MongoDB</img>
+                        </div>
+                        <div class="col-xs-5 tools-item">
+                          <img src="icon/postgresql.png" height="20px" width="20px"> PostgreSQL</img>
+                        </div>
+                      </div>
                     </div>
                   </div>
-                </div>
-              </div>
-              <div class="row skill">
-                <div class="col-xs-4">
-                  <h4 class="no-margin text-center skill-domain"> Front end</h4>
-                </div>
-                <div class="col-xs-8 skill-tools">
                   <div class="row">
-                    <div class="col-xs-6">
-                      <img src="icon/django.png" height="20px" width="20px"> Django </img>
+                    <div class="col-xs-4">
+                      <h5 class="no-margin text-center skill-domain"> Front end</h5>
                     </div>
-                    <div class="col-xs-6">
-                      <img src="icon/bootstrap.png" height="20px" width="20px"> Bootstrap </img>
-                    </div>
-                    <div class="col-xs-6 tools-item">
-                      <img src="icon/jquery.png" height="20px" width="20px"> jQuery</img>
+                    <div class="col-xs-8 skill-tools">
+                      <div class="row">
+                        <div class="col-xs-3 tools-item">
+                          <img src="icon/html5.png" height="20px" width="20px"> HTML </img>
+                        </div>
+                        <div class="col-xs-3 tools-item">
+                          <img src="icon/css3.png" height="20px" width="20px"> CSS </img>
+                        </div>
+                        <div class="col-xs-6 tools-item">
+                          <img src="icon/js.png" height="20px" width="20px"> Javascript </img>
+                        </div>
+                        <div class="col-xs-4 tools-item">
+                          <img src="icon/bootstrap.png" height="20px" width="20px"> Bootstrap </img>
+                        </div>
+                        <div class="col-xs-4 tools-item">
+                          <img src="icon/jquery.png" height="20px" width="20px"> JQuery</img>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+          <div class="row hobbies">
+            <div class="col-xs-12">
+            <h4 class="no-margin"><i class="fa fa-star circle-icon"></i><span> Hobbies</span></h4>
+            </div>
+            <div class="col-xs-5 hobby"> <i class="fa fa-heart"></i> Cycling</div>
+            <div class="col-xs-6 hobby"> <i class="fa fa-heart"></i> Personal Web Project</div>
+            <div class="col-xs-5 hobby"> <i class="fa fa-heart"></i> Running</div>
+            <div class="col-xs-6 hobby"> <i class="fa fa-heart"></i> Raspberry Pi</div>
+          </div>
         </div>
         <div class="col-xs-6 column">
           <div class="row experience">
             <div class="col-xs-12" style="padding:0;">
               <h3 class="no-margin"><i class="fa fa-industry circle-icon"></i><span>Experience</span></h3>
-              <div class="row">
+              <div class="row exp-header">
                 <div class="col-xs-4">
                   <img src="icon/IS.jpg" class="img-thumbnail"/>
                 </div>
@@ -249,7 +281,7 @@
                     <div class="col-xs-4">
                       10-2013
                     </div>
-                    <div class="col-xs-2 col-xs-offset-6">
+                    <div class="col-xs-2 col-xs-offset-5">
                       now
                     </div>
                   </div>
@@ -269,16 +301,16 @@
                   <div class="job-description">
                     <p class="text-justify"> 
                       <strong>Development and deployment  of the continuous integration</strong><br>
-                      This tools manage each new modification in a source code and launch a new build of the binaries following by a complete and multi-steped regression campaign to determine if source code update is not buggy. In addition to that, I should assume the continuity of service to respect project millestone 
+                      This tools manage each new modification in a source code and launch a new build of the binaries following by a complete and multi-stepped validation campaigns to determine if source code update embeds regression. In addition, I assume the continuity of service to respect project millestone 
                     </p>
                     <p class="text-justify">
-                      <strong>Framework developement to render results from continuous integration</strong> <br>
-                      Integration of my own plugin in Jenkins for database interaction. Database architecture creation with necessary views, index and stored procedure. Web site specification, developement and deployement for rendering results and manage continous integrtaion.
+                      <strong>Framework development to render results from continuous integration</strong> <br>
+                      Integration of our own plugin in Jenkins for the database interaction. Database architecture creation with necessary views, index and stored procedure. Web site specification, developement and deployement for rendering results and manage continous integrtaion.
                     </p>
                   </div>
                 </div>
               </div>
-              <div class="row">
+              <div class="row exp-header">
                 <div class="col-xs-4">
                   <img src="icon/MDR.jpg" class="img-thumbnail"/>
                 </div>
@@ -312,7 +344,7 @@
                   <div class="job-description">
                     <p class="text-justify">
                       <strong>Industrial computing developer</strong><br>
-                      Software architecture design, developement of genric and modular source code, implementation of new communication protocols. Project strated as an internee and finish as employee. 
+                      Software architecture design, developement of generic and modular source code, implementation of new communication protocols. Project started as an trainee and finish as employee. 
                     </p>
                     <p class="text-justify">
                       <strong> Project manager on complex systems</strong>(electric, electronic, automatism)<br>
@@ -321,7 +353,7 @@
                   </div>
                 </div>
               </div>
-              <div class="row">
+              <div class="row exp-header">
                 <div class="col-xs-4">
                   <img src="icon/rexroth.png" class="img-thumbnail" />
                 </div>
@@ -365,16 +397,6 @@
             </div>
           </div>
         </div>
-        <div class="col-xs-12 column">
-          <div class="row">
-            <div class="col-xs-3">
-            <h4 class="no-margin"><i class="fa fa-star circle-icon"></i><span>Hobbies</span></h4>
-            </div>
-            <div class="col-xs-2 hobby"> <i class="fa fa-heart"></i> Cycling</div>
-            <div class="col-xs-2 hobby"> <i class="fa fa-heart"></i> Runnig</div>
-            <div class="col-xs-2 hobby"> <i class="fa fa-heart"></i> Swim</div>
-        </div>
-      </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
