modification about me and emphasis of sentences or key words

--- a/resume.html
+++ b/resume.html
@@ -102,13 +102,11 @@
                 <span>About Me</span>
               </h3>
     			    <p class="text-justify" >
-      				  I'm in charge of developping innovative tools to automatize and optimize daily tasks, analyzing datas to compute and extract only essential information, and rendering data everywher through web technologies.<br>
+      				  I develop innovative <span class="text-emphase">tools to automatize and optimize development tasks</span>, to analyze data in order to compute and extract only essential information. I also build web applications for <span class="text-emphase"> reporting and continous delivery</span>. To achieve that, I use a combination of technologies and several programming language.<br>
 
-                I prefer using a combination of technologies and languages rather than focusing on only one,as Guido says, complex is better than complicated. I like to take step back to do the right things rather than deliver a quick workaround.<br>
+                I'm passionnate about <span class="text-emphase">learning new technologies</span> and I think that is a full part of my job. My learning choices are diverse, and cover <span class="text-emphase">big data technologies to embedded system for IOT</span>, passing through organizational methods and web technologies. During my development, I like to take step back to do the right things rather than deliver a quick workaround.<br>
 
-                I'm convinced that technological watch is an important part of my job. My learning choices are diverse, and cover the big data to embedded system for IOT, passing through organization methods and web technologies.<br>
-
-                I'm a creative,serious and enthusiastic person,who like to be helpful and attuned to my teammates.
+                I'm a <span class="text-emphase">creative,serious and implicated person</span>,who like to be helpful and attuned to my teammates.
     			    </p>
         		</div>
             <div class="col-xs-12 education">
@@ -274,14 +272,17 @@
                 <div class="col-xs-8">
                   <div class="row">
                     <div class="col-xs-12">
-                      <h4 class="no-margin"> Software developer</h4>
+                      <h4 class="no-margin">Software developer</h4>
                     </div>
                   </div>  
                   <div class="row">
                     <div class="col-xs-4">
                       10-2013
                     </div>
-                    <div class="col-xs-2 col-xs-offset-5">
+                    <div class="col-xs-5 no-right-padding no-left-padding">
+                      <em class="small">2 years 8 months</em>
+                    </div>
+                    <div class="col-xs-2">
                       now
                     </div>
                   </div>
@@ -300,12 +301,12 @@
                 <div class="col-xs-12">
                   <div class="job-description">
                     <p class="text-justify"> 
-                      <strong>Development and deployment  of the continuous integration</strong><br>
-                      This tools manage each new modification in a source code and launch a new build of the binaries following by a complete and multi-stepped validation campaigns to determine if source code update embeds regression. In addition, I assume the continuity of service to respect project millestone 
+                      Development and deployment  of the <span class="text-emphase">continuous integration</span><br>
+                      This tools manage each new modification in a source code and launch a new <span class="text-emphase">build of the binaries</span> following by a complete and <span class="text-emphase">multi-stepped validation campaigns</span> to determine if source code update embeds regression. In addition, I assume the <span class="text-emphase">continuity of service</span> to respect project millestone 
                     </p>
                     <p class="text-justify">
-                      <strong>Framework development to render results from continuous integration</strong> <br>
-                      Integration of our own plugin in Jenkins for the database interaction. Database architecture creation with necessary views, index and stored procedure. Web site specification, developement and deployement for rendering results and manage continous integrtaion.
+                      Framework development to render results from continuous integration <br>
+                      Integration of our own <span class="text-emphase">Jenkins plugin</span> for the database interaction. <span class="text-emphase">Database architecture creation</span> with necessary views, index and stored procedure. <span class="text-emphase">Web site specification, developement and deployement</span> for rendering results and manage continous integrtaion.
                     </p>
                   </div>
                 </div>
@@ -324,7 +325,10 @@
                     <div class="col-xs-4">
                       02-2012
                     </div>
-                    <div class="col-xs-4 col-xs-offset-4">
+                    <div class="col-xs-4 no-right-padding no-left-padding">
+                      <em class="small">1 year 10 months</em>
+                    </div>
+                    <div class="col-xs-4">
                       10-2013
                     </div>
                   </div>
@@ -343,12 +347,12 @@
                 <div class="col-xs-12">
                   <div class="job-description">
                     <p class="text-justify">
-                      <strong>Industrial computing developer</strong><br>
-                      Software architecture design, developement of generic and modular source code, implementation of new communication protocols. Project started as an trainee and finish as employee. 
+                       As an Industrial computing developer, I work on 
+                      <span class="text-emphase">software architecture design</span>, developement of generic and <span class="text-emphase">modular source code</span>, implementation of <span class="text-emphase">new communication protocols</span>. Project started as an trainee and finish as employee. 
                     </p>
                     <p class="text-justify">
-                      <strong> Project manager on complex systems</strong>(electric, electronic, automatism)<br>
-                      International project management (Europe,Asia and Middle East) from 10k€ to +100k€.I was the unique interface with the customer after the purcahse order, organisator of key points ( relase planning , factory acceptance test, commissioning), technical support main interface
+                      <span class="text-emphase"> Project manager</span> on complex systems(electric, electronic, automatism).<br>
+                      <span class="text-emphase">International </span> project (Europe,Asia and Middle East) from 10k€ to +100k€.I was the unique interface with the customer after the purcahse order, organisator of key points ( relase planning , factory acceptance test, commissioning), <span class="text-emphase">technical support </span> main interface
                     </p>
                   </div>
                 </div>
@@ -367,7 +371,10 @@
                     <div class="col-xs-4">
                       09-2010
                     </div>
-                    <div class="col-xs-4 col-xs-offset-4">
+                    <div class="col-xs-4 no-right-padding no-left-padding">
+                      <em class="small">6 months</em>
+                    </div>
+                    <div class="col-xs-4">
                       02-2011
                     </div>
                   </div>
@@ -386,10 +393,10 @@
                 <div class="col-xs-12">
                   <div class="job-description">
                     <p class="text-justify">
-                      <strong>Development of the firmware</strong> in an electronic joystick (THE5)<br> 
-                      Optimization of the main scheduler code to fit real time processing.
+                      <span class="text-emphase">Development of the firmware</span> in an electronic joystick (THE5)<br> 
+                      <span class="text-emphase">Optimization of the main scheduler </span> code to fit real time processing.
                       Development of new features involving PWM and CAN protocol. 
-                      Test plan specification and deploymeent of unitary test campaigns. 
+                      Test plan specification and deployment of unitary test campaigns. 
                     </p>  
                  </div>
                 </div>
